emirsaribulak tarafından oluşturuldu

--- a/hakkımda.html
+++ b/hakkımda.html
@@ -17,7 +17,7 @@ Emir Saribulak
 <a href="iletiþim.html">Ýletiþim</a></br>
 </div>
 <div id="icerik">
-Websitemize hoþgeldiniz...
+Herkese Merhaba Ben Emir.11 yaþýndayým.Video çekiyorum.Sizin için bu websiteyi yaptým.Ýnþallah sitemi beðenmiþsinizdir.Ýyi günler.Kanalýma abone olmayý unutmayýn.
 </div>
 <div id="footer">
 Copyright 2017.Tum Haklari Saklidir.Ýceriklerin kopyalanmasi yasaktir. 
@@ -25,4 +25,3 @@ Copyright 2017.Tum Haklari Saklidir.Ýceriklerin kopyalanmasi yasaktir.
 </body>
 </head>
 </body>
-</html>
