--- a/iletişim.html
+++ b/iletişim.html
@@ -17,7 +17,19 @@ Emir Saribulak
 <a href="iletiþim.html">Ýletiþim</a></br>
 </div>
 <div id="icerik">
-Websitemize hoþgeldiniz...
+<form action="gonder.php" method="post">
+<table width="500" border="0" bgcolor="#e2e2e2" font face="Thoma" size="2" align="center" cellpadding="20" cellspacing="20">
+<tr>
+<th colspan="2" scope="col"> Site Ýletiþim Formu </th>
+</tr>
+<tr>
+<td>
+<pre>
+ADINIZ : <input type="text" name="isim"><br>
+SOYADINIZ : <input type="text" name="soyad"><br>
+E-MAÝL : <input type="text" name="mail"><br>
+YORUM : <textarea cols="30" rows="10" name="yorum">Bu alana yorum yapabilirsiniz</textarea><br>
+<input type="submit" value="GÖNDER"> <input type="reset" value="TEMÝZLE">
 </div>
 <div id="footer">
 Copyright 2017.Tum Haklari Saklidir.Ýceriklerin kopyalanmasi yasaktir. 
@@ -25,4 +37,3 @@ Copyright 2017.Tum Haklari Saklidir.Ýceriklerin kopyalanmasi yasaktir.
 </body>
 </head>
 </body>
-</html>
