--- a/duyurular.html
+++ b/duyurular.html
@@ -11,13 +11,14 @@ Emir Saribulak
 <a href="foto.html">Fotoðraflar</a></br>
 <a href="duyurular.html">Duyurular</a></br>
 <a href="kanalýmýz.html">Kanalýmýz</a></br>
-<a href="hakkýmda.html">Hakkýmýzda</a></br>
+<a href="hakkýmda.html">Hakkýmýda</a></br>
 <a href="minecrafthakkýndaherþey.html">Minecraft</a></br>
 <a href="üyelik.html">Üye ol</a></br>
 <a href="iletiþim.html">Ýletiþim</a></br>
 </div>
 <div id="icerik">
-Websitemize hoþgeldiniz...
+Merhaba Arkadaþlar Bugün sizlere yepyeni bir video sundum bu videoya like atarsanýz diðer video ardýndan hemen gelecek.
+
 </div>
 <div id="footer">
 Copyright 2017.Tum Haklari Saklidir.Ýceriklerin kopyalanmasi yasaktir. 
@@ -25,4 +26,3 @@ Copyright 2017.Tum Haklari Saklidir.Ýceriklerin kopyalanmasi yasaktir.
 </body>
 </head>
 </body>
-</html>
