--- a/foto.html
+++ b/foto.html
@@ -17,12 +17,15 @@ Emir Saribulak
 <a href="iletiþim.html">Ýletiþim</a></br>
 </div>
 <div id="icerik">
-Websitemize hoþgeldiniz...
+<table border="1">
+<tr>
+<td><img src="images/Emir Saribulak.jpg" widht="100" height="100"></td>
+</tr>
+</table>
 </div>
 <div id="footer">
-Copyright 2017.Tum Haklari Saklidir.Ýceriklerin kopyalanmasi yasaktir. 
+Copyright 2017.Tum Haklari Saklidir.Ýceriklerin kopyalanmasý yasaktýr.
 </div>
 </body>
 </head>
 </body>
-</html>
