--- a/minecrafthakkındaherşey.html
+++ b/minecrafthakkındaherşey.html
@@ -17,7 +17,7 @@ Emir Saribulak
 <a href="iletiþim.html">Ýletiþim</a></br>
 </div>
 <div id="icerik">
-Websitemize hoþgeldiniz...
+Þimdilik bu sayfa olmayacak.
 </div>
 <div id="footer">
 Copyright 2017.Tum Haklari Saklidir.Ýceriklerin kopyalanmasi yasaktir. 
@@ -25,4 +25,3 @@ Copyright 2017.Tum Haklari Saklidir.Ýceriklerin kopyalanmasi yasaktir.
 </body>
 </head>
 </body>
-</html>
